// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderCompose golden snapshots (built-in catalog) postgres 1`] = `
"# Generated by LocaInfra for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "li-shop"
services:
  postgres:
    image: "postgres:17-alpine"
    container_name: "li-shop-postgres"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_POSTGRES__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5433:5432"
    volumes:
      - "li-shop-postgres-data:/var/lib/postgresql/data"
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "shop"
      locainfra.service: "postgres"
      locainfra.instance: "postgres"
      locainfra.type: "postgres"
      locainfra.catalog-id: "postgres"
      locainfra.version: "17"
    networks:
      - "li-shop"
volumes:
  li-shop-postgres-data:
    name: "li-shop-postgres-data"
    labels:
      locainfra.stack: "shop"
      locainfra.service: "postgres"
      locainfra.instance: "postgres"
      locainfra.type: "postgres"
networks:
  li-shop:
    name: "li-shop"
    labels:
      locainfra.stack: "shop"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) redis 1`] = `
"# Generated by LocaInfra for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "li-shop"
services:
  redis:
    image: "redis:7-alpine"
    container_name: "li-shop-redis"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_REDIS__REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_REDIS__REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "li-shop-redis-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "shop"
      locainfra.service: "redis"
      locainfra.instance: "redis"
      locainfra.type: "redis"
      locainfra.catalog-id: "redis"
      locainfra.version: "7"
    networks:
      - "li-shop"
volumes:
  li-shop-redis-data:
    name: "li-shop-redis-data"
    labels:
      locainfra.stack: "shop"
      locainfra.service: "redis"
      locainfra.instance: "redis"
      locainfra.type: "redis"
networks:
  li-shop:
    name: "li-shop"
    labels:
      locainfra.stack: "shop"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) upstash-redis 1`] = `
"# Generated by LocaInfra for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "li-shop"
services:
  redis:
    image: "redis:7-alpine"
    container_name: "li-shop-redis"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_REDIS__REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_REDIS__REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "li-shop-redis-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "shop"
      locainfra.service: "redis"
      locainfra.instance: "redis"
      locainfra.type: "redis"
      locainfra.catalog-id: "redis"
      locainfra.version: "7"
    networks:
      - "li-shop"
  upstash-redis:
    image: "hiett/serverless-redis-http:latest"
    container_name: "li-shop-upstash-redis"
    restart: "unless-stopped"
    environment:
      SRH_MODE: "env"
      SRH_TOKEN: "\${LI_SECRET_UPSTASH_REDIS__SRH_TOKEN}"
      SRH_CONNECTION_STRING: "redis://:\${LI_SECRET_REDIS__REDIS_PASSWORD}@redis:6379"
    ports:
      - "127.0.0.1:8080:80"
    healthcheck:
      test:
        - "CMD"
        - "nc"
        - "-z"
        - "127.0.0.1"
        - "80"
      interval: "5s"
      retries: 10
      start_period: "5s"
    depends_on:
      redis:
        condition: "service_healthy"
    labels:
      locainfra.stack: "shop"
      locainfra.service: "upstash-redis"
      locainfra.instance: "upstash-redis"
      locainfra.type: "upstash-redis"
      locainfra.catalog-id: "upstash-redis"
      locainfra.version: "latest"
    networks:
      - "li-shop"
volumes:
  li-shop-redis-data:
    name: "li-shop-redis-data"
    labels:
      locainfra.stack: "shop"
      locainfra.service: "redis"
      locainfra.instance: "redis"
      locainfra.type: "redis"
networks:
  li-shop:
    name: "li-shop"
    labels:
      locainfra.stack: "shop"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) named instances: two postgres (one ephemeral), redis, upstash via uses 1`] = `
"# Generated by LocaInfra for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "li-shop"
services:
  main-db:
    image: "postgres:17-alpine"
    container_name: "li-shop-main-db"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_MAIN_DB__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5433:5432"
    volumes:
      - "li-shop-main-db-data:/var/lib/postgresql/data"
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "shop"
      locainfra.service: "main-db"
      locainfra.instance: "main-db"
      locainfra.type: "postgres"
      locainfra.catalog-id: "postgres"
      locainfra.version: "17"
    networks:
      - "li-shop"
  events:
    image: "postgres:17-alpine"
    container_name: "li-shop-events"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_EVENTS__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5434:5432"
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "shop"
      locainfra.service: "events"
      locainfra.instance: "events"
      locainfra.type: "postgres"
      locainfra.catalog-id: "postgres"
      locainfra.version: "17"
    networks:
      - "li-shop"
  cache:
    image: "redis:7-alpine"
    container_name: "li-shop-cache"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_CACHE__REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_CACHE__REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "li-shop-cache-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "shop"
      locainfra.service: "cache"
      locainfra.instance: "cache"
      locainfra.type: "redis"
      locainfra.catalog-id: "redis"
      locainfra.version: "7"
    networks:
      - "li-shop"
  rest:
    image: "hiett/serverless-redis-http:latest"
    container_name: "li-shop-rest"
    restart: "unless-stopped"
    environment:
      SRH_MODE: "env"
      SRH_TOKEN: "\${LI_SECRET_REST__SRH_TOKEN}"
      SRH_CONNECTION_STRING: "redis://:\${LI_SECRET_CACHE__REDIS_PASSWORD}@cache:6379"
    ports:
      - "127.0.0.1:8080:80"
    healthcheck:
      test:
        - "CMD"
        - "nc"
        - "-z"
        - "127.0.0.1"
        - "80"
      interval: "5s"
      retries: 10
      start_period: "5s"
    depends_on:
      cache:
        condition: "service_healthy"
    labels:
      locainfra.stack: "shop"
      locainfra.service: "rest"
      locainfra.instance: "rest"
      locainfra.type: "upstash-redis"
      locainfra.catalog-id: "upstash-redis"
      locainfra.version: "latest"
    networks:
      - "li-shop"
volumes:
  li-shop-main-db-data:
    name: "li-shop-main-db-data"
    labels:
      locainfra.stack: "shop"
      locainfra.service: "main-db"
      locainfra.instance: "main-db"
      locainfra.type: "postgres"
  li-shop-cache-data:
    name: "li-shop-cache-data"
    labels:
      locainfra.stack: "shop"
      locainfra.service: "cache"
      locainfra.instance: "cache"
      locainfra.type: "redis"
networks:
  li-shop:
    name: "li-shop"
    labels:
      locainfra.stack: "shop"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) named instances: two postgres (one ephemeral), redis, upstash via uses 2`] = `
"# Generated by LocaInfra: secrets for docker compose interpolation. Do not commit.
LI_SECRET_MAIN_DB__POSTGRES_PASSWORD=mainDbSecret_0123456789abcdefghijklmnopq
LI_SECRET_EVENTS__POSTGRES_PASSWORD=eventsSecret_0123456789abcdefghijklmnopq
LI_SECRET_CACHE__REDIS_PASSWORD=cacheSecret_0123456789abcdefghijklmnopqr
LI_SECRET_REST__SRH_TOKEN=restToken_0123456789abcdefghijklmnopqrstu
"
`;

exports[`renderCompose golden snapshots (built-in catalog) seed file: read-only bind mount after the data volume ($ escaped) 1`] = `
"# Generated by LocaInfra for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "li-shop"
services:
  main-db:
    image: "postgres:17-alpine"
    container_name: "li-shop-main-db"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_MAIN_DB__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5433:5432"
    volumes:
      - "li-shop-main-db-data:/var/lib/postgresql/data"
      - type: "bind"
        source: "/work/shop$$app/db/seed.sql"
        target: "/docker-entrypoint-initdb.d/seed.sql"
        read_only: true
        bind:
          create_host_path: false
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "shop"
      locainfra.service: "main-db"
      locainfra.instance: "main-db"
      locainfra.type: "postgres"
      locainfra.catalog-id: "postgres"
      locainfra.version: "17"
    networks:
      - "li-shop"
  events:
    image: "postgres:17-alpine"
    container_name: "li-shop-events"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_EVENTS__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5434:5432"
    volumes:
      - type: "bind"
        source: "/work/shop$$app/db/events.sql"
        target: "/docker-entrypoint-initdb.d/seed.sql"
        read_only: true
        bind:
          create_host_path: false
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "shop"
      locainfra.service: "events"
      locainfra.instance: "events"
      locainfra.type: "postgres"
      locainfra.catalog-id: "postgres"
      locainfra.version: "17"
    networks:
      - "li-shop"
  cache:
    image: "redis:7-alpine"
    container_name: "li-shop-cache"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_CACHE__REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_CACHE__REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "li-shop-cache-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "shop"
      locainfra.service: "cache"
      locainfra.instance: "cache"
      locainfra.type: "redis"
      locainfra.catalog-id: "redis"
      locainfra.version: "7"
    networks:
      - "li-shop"
volumes:
  li-shop-main-db-data:
    name: "li-shop-main-db-data"
    labels:
      locainfra.stack: "shop"
      locainfra.service: "main-db"
      locainfra.instance: "main-db"
      locainfra.type: "postgres"
  li-shop-cache-data:
    name: "li-shop-cache-data"
    labels:
      locainfra.stack: "shop"
      locainfra.service: "cache"
      locainfra.instance: "cache"
      locainfra.type: "redis"
networks:
  li-shop:
    name: "li-shop"
    labels:
      locainfra.stack: "shop"
"
`;
